[package]
name = "rust-rclone"
version = "0.1.0"
edition = "2024"
description = "Download-on-demand rclone HTTP sidecar for offline desktop apps"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "net", "time", "io-util", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
thiserror = "1"
tracing = "0.1"
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde_json = "1"
